# bugcube

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
backend/: README.md  conda_env.yml  pyproject.toml  setup.cfg  test.env  tox.ini
backend/src/bugcube_backend/: __main__.py  _api.py  _config.py  _tasks.py  conda_env.yml
backend/src/bugcube_backend/backend/: __init__.py  images.py  meta.py  misc.py
backend/src/bugcube_backend/routes/: __init__.py  images.py  meta.py  misc.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/_codux/boards/app/: app.board.tsx
frontend/src/_codux/component-templates/default/: new-component.tsx
frontend/src/components/App/: App.module.scss  App.tsx
frontend/src/components/DownloadButton/: DownloadButton.module.scss  DownloadButton.tsx
frontend/src/components/DropdownMenu/: DropdownMenu.module.scss  DropdownMenu.tsx
frontend/src/components/Footer/: Footer.module.scss  Footer.tsx
frontend/src/components/ImageOverview/: ImageOverview.module.scss  ImageOverview.tsx
frontend/src/components/Input/: Input.tsx
frontend/src/components/Meta/: Meta.module.scss  Meta.tsx
frontend/src/components/MyDialog/: MyDialog.module.scss  MyDialog.tsx
install_scripts/: README.md  backend.sh  frontend.sh  install.sh  install_service.sh  libarchive.sh  local_user.sh  nginx.sh  nodejs.sh  setup.sh
