[metadata]
name = bugcube_backend
description = BugCube python backend
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus Stabrin
author_email = it@markus-stabrin.de
license = MPL-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    fastapi
    jinja2
    numpy
    pillow
    pydantic
    pydantic-settings
    pydantic-yaml
python_requires = >=3.12
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bugcube_backend = bugcube_backend.__main__:run

[options.extras_require]
dev =
    build
    pre-commit
    pytest
    pytest-cov
    tox
    twine

[options.package_data]
* = *.json
